@@ -19,6 +19,7 @@ sourcesJar {
 }
 
 configurations {
+  implementation.extendsFrom(annotatedGuava)
   fatJar {
     canBeConsumed = true
     canBeResolved = false
@@ -44,18 +45,8 @@ dependencies {
     // As of 2019-12-16, the version of reflection-util in the Annotation
     // File Utilities takes priority over this version, in the fat jar
     // file. :-( So update it and re-build it locally when updating this.
-    implementation 'org.plumelib:reflection-util:1.0.3'
-    implementation 'org.plumelib:plume-util:1.5.5'
-
-    // TODO: it's a bug that annotatedlib:guava requires the error_prone_annotations dependency.
-    // Update the next two version numbers in tandem.  Get the Error Prone version from the "compile
-    // dependencies" section of https://mvnrepository.com/artifact/com.google.guava/guava/28.2-jre .
-    // (It isn't at https://mvnrepository.com/artifact/org.checkerframework.annotatedlib/guava/28.2-jre, which is the bug.)
-    implementation 'com.google.errorprone:error_prone_annotations:2.7.1'
-    implementation ('org.checkerframework.annotatedlib:guava:30.1.1-jre') {
-        // So long as Guava only uses annotations from checker-qual, excluding it should not cause problems.
-        exclude group: 'org.checkerframework'
-    }
+    implementation 'org.plumelib:reflection-util:1.0.4'
+    implementation 'org.plumelib:plume-util:1.5.8'
 
     // Dependencies added to "shadow" appear as dependencies in Maven Central.
     shadow project(':checker-qual')
@@ -563,7 +554,7 @@ task ainferTestCheckerGenerateJaifs(type: Test) {
 }
 
 task ainferTestCheckerValidateJaifs(type: Test) {
-    description 'Internal task.  Users should run ainferNullnessJaifTest instead.  This type-checks the ainfer-testchecker files using the .jaif files generated by ainferTestCheckerGenerateJaifs'
+    description 'Internal task.  Users should run ainferTestCheckerJaifTest instead.  This type-checks the ainfer-testchecker files using the .jaif files generated by ainferTestCheckerGenerateJaifs'
 
     dependsOn(ainferTestCheckerGenerateJaifs)
     outputs.upToDateWhen { false }
@@ -629,7 +620,7 @@ task ainferNullnessGenerateJaifs(type: Test) {
         exec {
             executable "${afu}/scripts/insert-annotations-to-source"
             // Script argument -cp must precede Java program argument -i.
-            args = ['-cp', "${sourceSets.test.output.asPath}"]
+            args = ['-cp', "${sourceSets.test.output.asPath}:${project(':checker-qual').tasks.jar.archivePath}"]
             args += ['-i']
             for (File jaif : jaifs) {
                 args += [jaif.toString()]
@@ -758,6 +749,8 @@ task wpiManyTest(group: "Verification") {
                         || line.startsWith("warning: [options] bootstrap")
                         // Ignore warnings about illegal access:
                         || line.contains("Option --illegal-access is deprecated")
+                        // Ignore the warnings about --add-opens arguments to the JVM
+                        || line.contains("warning: [options] --add-opens has no effect at compile time")
                         // Ignore the summary line that reports the total number of warnings (which can be single or plural).
                         || line.endsWith("warning")
                         || line.endsWith("warnings")) {
